Version 1.5.4 - xx xxx 201x

  * Remove errant BOOST_FILESYSTEM_VERSION declaration.
  * Correct RetsExceptionContext::GetFileName to fs::path.
  * Applied Ruby patch submitted by Matthew Schultz
  * Expose ObjectResponse getters to SWIG languages. Ticket #167.
  * Handle optional RETS-STATUS when included in login response.
    Ticket #168.

Version 1.5.3 - 10 Mar 2012

  * Fix detection of gmcs by configure.
  * Fix examples to use lazy initialization of the Columns to better
    demonstrate how to address just-in-time data delivery.
  * Fix Unix perl build.
  * Make sure that SearchResultSet::GetColumn doesn't attempt to use 
    an empty string.
  * Apply patches provided by Matthew Schultz.
  * Default to BOOST_FILESYSTEM_3 and boost 1.44 or later. Ticket #166.
  * Recognize RETS/1.8.0.
  * Pass exceptions through to Java.

Version 1.5.2 - 11 Feb 2011
  
  * Add --enable-thread-safe switch and make thread-safe.
    Ticket #124.
  * Support MinGW. Ticket #134.
  * Support Ruby-x86 on Windows. Ticket #136.
  * Rolled SWIG to 2.0.x. Ticket #159.
    Created MinGW-X86 and MinGW-x64 tools branches in vendor.
  * Make sure reply code 20201 is passed back to user. Ticket #137.
  * Fix Ruby GC crash for Ruby 1.8.7 and later. Ticket #158.
  * Expose Raw XML search enhancement to PHP. Ticket #160.
  * #undef MAP_TYPE and friends in GetObjectRequest.h. Ticket #161.
  * Apply patch to swig Makefile.vc provided by Damian Boune.
    Ticket #163.

Version 1.5.1 - 12 May 2010

  * Add librets-config-win for Windows. Ticket #138.
  * Properly parse failed login RETS Reply. Ticket #139.
  * User Agent Authentication fails for non-Interealty servers.
    Ticket #140.
  * UpdateResponse.Parse() throws execption. Ticket #155.
  * Add InKeyIndex() to MetadataTable and expose to SWIG.
    Ticket #157.

Version 1.5.0b1 - 22 Mar 2010

  * Support 64 bit Windows. Ticket #125.
    Note that library names for native development have changed