@@ -86,6 +86,11 @@ string CurlHttpResponse::GetHeader(string name) const
     }
 }
 
+const StringMap& CurlHttpResponse::GetHeaders() const
+{
+    return mHeaders;
+}
+
 void CurlHttpResponse::SetHeader(string name, string value)
 {
     mHeaders[ba::to_lower_copy(name)] = value;
